2008-09-08  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* NEWS:
	updated news for the upcoming 0.2.4 release

	* m4/link_as_needed.m4:
	updated linker test script for newer autotools/g++ versions

	* src/gnome-color-chooser.1:
	changed homepage URL to http://gnomecc.sourceforge.net

	* src/gnome-color-chooser.glade:
	updated homepage URL and translator list in aboutdialog

	* src/gnome-color-chooser.xml.in:
	changed panel matchings, changed some translator notes

	* src/mainwindow.cc:
	changed revert button that it doesn't apply its changes on its own

2008-09-03  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* src/gnome-color-chooser.glade:
	marked "gtk-revert-to-saved" button as not translatable

2008-09-01  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* src/gnome-color-chooser.glade:
	* src/mainwindow.cc:
	* src/mainwindow.h:
	added revert button that instantly resets all theme modifications

2008-09-01  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* src/validatorwindow.cc:
	made ValidatorWindow appear in taskbar if started with
	  --validator-only,
	added line and coloumn numbers in error messages

2008-07-27  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* po/POTFILES.in:
	added src/validatorwindow.cc

	* po/de.po:
	100% translated strings as usual ;-)

	* src/Makefile.am:
	added validatorwindow.(h|cc)

	* src/checkbutton.cc:
	made comparison of checkbutton value (true/false) case-insensitive

	* src/configloader.cc:
	first preparation of the schema loader for newer schema formats

	* src/exporter.cc:
	* src/exporter.h:
	(minor) moved an include from header to source file

	* src/gnome-color-chooser.1:
	added new command line options (filename and --validator-only)

	* src/gnome-color-chooser.glade:
	added validator window and its menu entry in the main window

	* src/main.cc:
	added custom command line options (filename of a GNOMECC theme to
	load and --validator-only that starts the Engine Schema Validator
	only instead of the full application)
